yaml_parser/tests/fail/trailing-comment-in-multiline-plain-scalar.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 4, column 8
  |
4 |        c
  |        ^
expected `...`
